# qserv-kafka

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  ruff-shared.toml  tox.ini
.github/workflows/: ci.yaml  periodic-ci.yaml
changelog.d/: 20250505_130839_rra_DM_50527.md  20250505_155326_rra_DM_50527a.md  20250507_180313_rra_DM_50728.md  20250508_174532_rra_DM_50728.md  20250512_155207_rra_DM_50728.md  20250516_103043_rra_DM_50878.md  20250516_165313_rra_DM_50961.md  20250523_103635_rra_DM_51085.md  20250527_104458_rra_DM_51113.md  20250527_170724_rra_DM_51121.md  20250528_154140_rra_DM_51121.md  20250528_154741_rra_DM_51121.md  20250528_161854_rra_DM_51121.md  20250609_081648_rra_DM_51308.md  20250609_104115_rra_DM_51308.md  20250609_121639_rra_DM_51308.md  20250609_180548_rra_DM_51308.md  20250610_181601_rra_DM_51310.md  20250611_135402_rra_DM_51309.md  20250611_155153_rra_DM_51309.md  20250612_170316_rra_DM_51364.md  20250613_110101_rra_DM_51364.md  20250616_163206_rra_DM_51365.md  20250616_170032_rra_DM_51365.md  20250618_112259_rra_DM_51448.md  20250618_140009_rra_DM_51450.md  20250627_123645_rra_DM_51594.md  20250718_164504_rra_DM_51818.md  20250718_184044_steliosvoutsinas_DM_51834.md  20250721_144711_rra_DM_51889.md  20250721_153024_rra_DM_51889.md  20250721_154604_rra_DM_51889.md  20250728_175358_rra_DM_51603.md  20250730_141256_rra_DM_51603a.md  20250730_220717_steliosvoutsinas_DM_52016.md  20250805_113449_danfuchs_HEAD.md  20250805_120152_danfuchs_HEAD.md  20250807_140741_danfuchs_HEAD.md  20250807_152451_rra_DM_52122.md  20250808_105800_rra_DM_52122.md  (+26 more)
scripts/: install-base-packages.sh  install-dependency-packages.sh
src/qservkafka/: __init__.py  background.py  cli.py  config.py  constants.py  events.py  exceptions.py  factory.py  kafkarouters.py  main.py  models.py  periodic_metrics.py  tasks.py
src/qservkafka/dependencies/: context.py
src/qservkafka/handlers/: external.py  internal.py  kafka.py
src/qservkafka/models/: bigquery.py  gafaelfawr.py  kafka.py  progress.py  qserv.py  query.py  state.py  votable.py
src/qservkafka/services/: monitor.py  query.py  results.py
src/qservkafka/storage/: backend.py  bigquery.py  gafaelfawr.py  qserv.py  rate.py  rest.py  state.py  votable.py
src/qservkafka/workers/: main.py
src/qservkafka/workers/functions/: results.py
tests/: conftest.py
tests/data/: discovery.json
tests/data/cancel/: simple.json
tests/data/jobs/: arraysize.json  data-maxrec.json  data-zero.json  data.json  simple.json  tabledata.json  upload.json
tests/data/qserv/: data-completed.json  data-executing.json  simple-completed.json  simple-failed.json  simple-large.json  simple-partial.json  upload-failed.json
tests/data/results/: data-generator.c  data-maxrec.binary2  data.binary2  data.json
tests/data/status/: data-completed.json  data-maxrec-completed.json  data-overquota.json  data-started.json  data-zero-completed.json  simple-aborted.json  simple-error.json  simple-failed.json  simple-large.json  simple-partial.json  upload-completed.json  upload-failed.json  upload-started.json
tests/handlers/: external_test.py  internal_test.py  kafka_test.py  shutdown_test.py
tests/kafka/: conftest.py  leak_test.py  query_test.py
tests/models/: bigquery_test.py  kafka_test.py  votable_test.py
tests/services/: errors_test.py  leak_test.py  monitor_test.py  query_errors_test.py  query_test.py
tests/storage/: bigquery_test.py  binary2_test.py  gafaelfawr_test.py  qserv_test.py  query_test.py  rate_test.py  voparquet_test.py  votable_test.py
tests/support/: arq.py  constants.py  data.py  datetime.py  gafaelfawr.py  kafka.py  logging.py  qserv.py
