[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "qserv-kafka"
description = "Kafka bridge to qserv"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["rubin", "lsst"]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Private :: Do Not Upload",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "aiojobs>=1.3",
    "arq>=0.26",
    "asyncmy>=0.2",
    "bitstring>=4.3",
    "fastapi>=0.112.2",
    "faststream[kafka]>=0.6",
    "httpx>=0.27",
    "memray>=1.17",
    "pyarrow>=21",
    "pydantic>=2.11",
    "pydantic-settings>=2.8",
    "redis>=5",
    "rubin-gafaelfawr",
    "safir[arq,db,kafka,redis]>=14.1.2",
    "structlog>24",
    "uvicorn[standard]>=0.34",
    "vo-models>=0.4",
]
dynamic = ["version"]

[project.scripts]
qserv-kafka = "qservkafka.cli:main"

[project.urls]
Homepage = "https://qserv-kafka.lsst.io"
Source = "https://github.com/lsst-sqre/qserv-kafka"

[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "aiokafka>=0.12",
    "asgi-lifespan",
    "coverage[toml]",
    "multipart",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-sugar",
    "pytest-timeout",
    "respx",
    "rubin-repertoire",
    "safir[testcontainers]>=11",
    "scriv[toml]",
    "testcontainers[mysql,redis]",
]
lint = [
    "pre-commit",
    "pre-commit-uv",
    "ruff>=0.9",
]
tox = [
    "tox>=4.24",
    "tox-uv>=1.25",
]
typing = [
    "mypy>=1.19",
]

[tool.coverage.run]
parallel = true
branch = true
source = ["qservkafka"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "raise RuntimeError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
enable_error_code = [
    "deprecated",
    "exhaustive-match",
    "explicit-override",
    "ignore-without-code",
    "redundant-expr",
    "redundant-self",
    "truthy-iterable",
    "unused-awaitable",
]
ignore_missing_imports = true
local_partial_types = true
plugins = ["pydantic.mypy"]
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"
filterwarnings = [
    # testcontainers hasn't updated all of the community modules
    "ignore:.*wait_container_is_ready decorator.*:DeprecationWarning",
    "ignore:.*wait_for_logs function.*:DeprecationWarning",
]
# The python_files setting is not for test detection (pytest will pick up any
# test files named *_test.py without this setting) but to enable special
# assert processing in any non-test supporting files under tests.  We
# conventionally put test support functions under tests.support and may
# sometimes use assert in test fixtures in conftest.py, and pytest only
# enables magical assert processing (showing a full diff on assert failures
# with complex data structures rather than only the assert message) in files
# listed in python_files.
python_files = ["tests/*.py", "tests/*/*.py"]

# Use the generic Ruff configuration in ruff.toml and extend it with only
# project-specific settings. Add a [tool.ruff.lint.extend-per-file-ignores]
# section for project-specific ignore rules.
[tool.ruff]
extend = "ruff-shared.toml"

[tool.ruff.lint.isort]
known-first-party = ["qservkafka", "tests"]
split-on-trailing-comma = false

[tool.scriv]
categories = [
    "Backwards-incompatible changes",
    "New features",
    "Bug fixes",
    "Other changes",
]
entry_title_template = "{{ version }} ({{ date.strftime('%Y-%m-%d') }})"
format = "md"
md_header_level = "2"
new_fragment_template = "file:changelog.d/_template.md.jinja"
skip_fragments = "_template.md.jinja"

[tool.setuptools_scm]
